demo/3.apply-network-policy/eshop-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: kvisord
  name: baseline
  namespace: eshop
spec:
  egress:
    - to:
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - tools
  podSelector: {}
  policyTypes:
    - Egress
